name:                uuid-uhm
version:             0.1.0.0
synopsis:            uuid
-- description:
homepage:            https://github.com/chessai/uuid-uhm.git
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Uuid
  build-depends:
      base >=4.7 && <4.13
    , aeson
    , deepseq
    , hashable 
    , path-pieces
    , text
  hs-source-dirs:      src
  default-language:    Haskell2010
